# canvas-proxy-data-parser

./: .gitignore  README.md  constants.py  google_service.py  main.py  models.py  pyproject.toml  utils.py
ml/: __init__.py
