[project]
name = "python-google-workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "bl1nkker",email = "nurovich14@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client (>=2.166.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "xlsxwriter (>=3.2.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
